updated icons + nav

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -96,6 +96,9 @@
   (function e(){var e=document.createElement("script");e.type="text/javascript",e.async=true,e.src="//staticw2.yotpo.com/AjlnS8JEjAtRTQPtvGRtYLUycrAXOeyWSnT0egp3/widget.js";var t=document.getElementsByTagName("script")[0];t.parentNode.insertBefore(e,t)})();
   </script>
 
+    <!-- Icons -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp" as="font" type="text/css" >
+
   <!-- Hotjar Tracking Code for https://jackspremium.com -->
 <script>
   (function(h,o,t,j,a,r){
