--- a/snippets/mobile-header.liquid
+++ b/snippets/mobile-header.liquid
@@ -1,4 +1,3 @@
-
 {% comment %} Is the color set to transparent? {% endcomment %}
 {%- assign mobile_menu_background_color = settings.mobile_menu_background_color | color_extract: 'alpha' -%}
 {%- assign mobile_menu_link_color = settings.mobile_menu_link_color | color_extract: 'alpha' -%}
@@ -37,23 +36,22 @@
   <div class="mobile-header__content
               mobile-layout--{{ settings.logo_menu_position }}
               mobile-logo__position--{{ settings.logo_mobile_position }}
-              header__icon-style-{{ settings.icon_style | replace: '_', '-' }}">
-  {% unless template == 'page.landing' %}
+              header__icon-style-{{ settings.mobile_icon_style | replace: '_', '-' }}">
     <div class="mobile-dropdown mobile-dropdown__position--{{ settings.logo_menu_position }}">
       <div class="mobile-menu__toggle-icon">
         <div class="mobile-header__open-menu">
-          {% render 'icon', name: 'menu' %}
+          <i class="material-icons-outlined">menu</i>
         </div>
         <div class="mobile-header__close-menu">
-          {% render 'icon', name: 'x' %}
+          <i class="material-icons-outlined">close</i>
         </div>
       </div>
       {% render 'mobile-menu', nav_blocks: nav_blocks %}
     </div>
-    {% endunless %}
     <div class="mobile-logo">
       {% if settings.logo_mobile != blank %}
         <a class="mobile-header__logo header__link primary-logo" href="{{ shop.url }}" title="{{ shop.name }}">
+          <!-- {% render 'svg' with 'logo' %} -->
           {% render 'image-element',
                   image: settings.logo_mobile,
                   alt: settings.logo_mobile.alt,
@@ -62,6 +60,7 @@
         </a>
       {% elsif section.settings.logo != blank %}
         <a class="mobile-header__logo header__link primary-logo" href="{{ shop.url }}" title="{{ shop.name }}">
+          <!-- {% render 'svg' with 'logo' %} -->
           {% render 'image-element',
                   image: section.settings.logo,
                   alt: section.settings.logo.alt,
@@ -74,27 +73,51 @@
         </a>
       {% endif %}
     </div>
-    {% unless template == 'page.landing' %}
     <div class="mobile-icons {% if settings.show_search_icon_mobile == false %}has-one-icon{% endif %}">
       {% if settings.show_search_icon_mobile %}
         {% comment %} Search icon {% endcomment %}
-        <a class="header__link action-area__link" data-show-search-trigger>
-          {% render 'icon',
-                  name: 'search',
-                  icon_class: 'header__icon'
-          %}
+        <a class="header__link action-area__link z-index-3" style="z-index: 99999;" data-show-search-trigger>
+          <i class="material-icons-outlined">search</i>
           <span class="icon-caption">{{ 'general.search.title' | t | escape }}</span>
         </a>
       {% endif %}
+
+
+
+      {% if shop.customer_accounts_enabled %}
+      {% comment %} Accounts {% endcomment %}
+      
+        {% if customer %}
+          {% comment %} Logout {% endcomment %}
+          <a class="mobile-menu__item item-with-icon action-area__link" href="{{ routes.account_url }}" >
+            {% if settings.icon_style != 'text' %}
+              <i class="material-icons-outlined">account_circle</i>
+            {% endif %}
+            <span class="icon-caption">
+              {{ 'layout.customer.my_account' | t | escape }}
+            </span>
+          </a>
+        {% else %}
+          {% comment %} Login {% endcomment %}
+          <a class="mobile-menu__item item-with-icon action-area__link" href="{{ routes.account_login_url }}" >
+            {% if settings.icon_style != 'text' %}
+            <i class="material-icons-outlined">account_circle</i>
+            {% endif %}
+            <span class="icon-caption">
+              {{ 'layout.customer.log_in' | t | escape }}
+            </span>
+          </a>
+        {% endif %}
+     
+    {% endif %}
+
+
 
       {% comment %} Cart icon {% endcomment %}
       <div class="header-cart action-area__link {% if cart.item_count != 0 %}has-cart-count{% endif %}" data-ajax-cart-trigger>
         <a class="header__link" {% if settings.cart_action != 'mini_cart' or settings.cart_action != 'drawer' %}href="{{ routes.cart_url }}"{% endif %} >
           <span class="header-cart__icon">
-            {% render 'icon',
-                    name: settings.cart_icon,
-                    icon_class: 'header__icon'
-            %}
+            <i class="material-icons-outlined">shopping_bag</i>
             <span class="header-cart__count header-cart__count--badge badge" data-bind="itemCount">
               {{ cart.item_count }}
             </span>
@@ -112,18 +135,18 @@
       </div>
 
     </div>
-    {% endunless %}
   </div>
 
   {% if settings.logo_mobile_position == 'below' %}
     <div class="mobile-logo__outer">
       {% if settings.logo_mobile != blank %}
         <a class="mobile-header__logo header__link primary-logo" href="{{ shop.url }}" title="{{ shop.name }}">
-          {% render 'image-element',
+          {% render 'svg' with 'logo' %}
+          <!-- {% render 'image-element',
                   image: settings.logo_mobile,
                   alt: settings.logo_mobile.alt,
                   additional_classes: 'primary-logo'
-          %}
+          %} -->
         </a>
       {% else %}
         <a href="{{ shop.url }}" class="header__link header__logo-text primary-brand">
