--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -141,7 +141,7 @@
       <div class="container">
         {% section 'product__sidebar' %}
         {% section 'product__main' %}
-       
+        {% section 'product__reviews' %}
         {% section 'product__recommendations' %}
       </div>
     </section>
