--- a/snippets/header__action-icons.liquid
+++ b/snippets/header__action-icons.liquid
@@ -35,7 +35,7 @@
     {% comment %} Search icon {% endcomment %}
     <a class="header__link action-area__link" data-show-search-trigger tabindex="0">
       <i class="material-icons-outlined icon--md">search</i>
-      <span class="icon-caption">{{ 'general.search.title' | t | escape }}</span>
+      <!-- <span class="icon-caption">{{ 'general.search.title' | t | escape }}</span> -->
     </a>
   {% endif %}
 
@@ -45,13 +45,13 @@
       {% comment %} Logout {% endcomment %}
       <a href="{{ routes.account_url }}" class="header__link action-area__link" >
           <i class="material-icons-outlined icon--md">account_circle</i>
-          <span class="icon-caption">{{ 'layout.customer.my_account' | t | escape }}</span>
+          <!-- <span class="icon-caption">{{ 'layout.customer.my_account' | t | escape }}</span> -->
       </a>
     {% else %}
       {% comment %} Login {% endcomment %}
       <a href="{{ routes.account_login_url }}" class="header__link action-area__link" >
           <i class="material-icons-outlined icon--md">account_circle</i>
-          <span class="icon-caption">{{ 'layout.customer.log_in' | t | escape }}</span>
+          <!-- <span class="icon-caption">{{ 'layout.customer.log_in' | t | escape }}</span> -->
       </a>
     {% endif %}
   {% endif %}
@@ -66,7 +66,7 @@
         </span>
       </span>
       <span class="header-cart__caption icon-caption">
-        {{ 'layout.general.cart' | t | escape }}
+        <!-- {{ 'layout.general.cart' | t | escape }} -->
         {%- if icon_style == 'text' -%}
           <span class="header-cart__count cart__count--text" data-bind="itemCount">{{ cart.item_count }}</span>
         {%- endif -%}
