--- a/snippets/mobile-header.liquid
+++ b/snippets/mobile-header.liquid
@@ -78,7 +78,7 @@
         {% comment %} Search icon {% endcomment %}
         <a class="header__link action-area__link z-index-3" style="z-index: 99999;" data-show-search-trigger>
           <i class="material-icons-outlined">search</i>
-          <span class="icon-caption">{{ 'general.search.title' | t | escape }}</span>
+          <!-- <span class="icon-caption">{{ 'general.search.title' | t | escape }}</span> -->
         </a>
       {% endif %}
 
@@ -93,9 +93,9 @@
             {% if settings.icon_style != 'text' %}
               <i class="material-icons-outlined">account_circle</i>
             {% endif %}
-            <span class="icon-caption">
+            <!-- <span class="icon-caption">
               {{ 'layout.customer.my_account' | t | escape }}
-            </span>
+            </span> -->
           </a>
         {% else %}
           {% comment %} Login {% endcomment %}
@@ -103,9 +103,9 @@
             {% if settings.icon_style != 'text' %}
             <i class="material-icons-outlined">account_circle</i>
             {% endif %}
-            <span class="icon-caption">
+            <!-- <span class="icon-caption">
               {{ 'layout.customer.log_in' | t | escape }}
-            </span>
+            </span> -->
           </a>
         {% endif %}
      
@@ -123,7 +123,7 @@
             </span>
           </span>
           <span class="header-cart__caption icon-caption">
-            {{ 'layout.general.cart' | t | escape }}
+            <!-- {{ 'layout.general.cart' | t | escape }} -->
             {%- if object.settings.icon_style == 'text' -%}
               <span class="header-cart__count cart__count--text" data-bind="itemCount">{{ cart.item_count }}</span>
             {%- endif -%}
