--- a/assets/custom.css.liquid
+++ b/assets/custom.css.liquid
@@ -29,6 +29,17 @@
     --ease-out: cubic-bezier(0.215, 0.61, 0.355, 1);
     --ease-out-back: cubic-bezier(0.34, 1.56, 0.64, 1);
   }
+
+
+  .bg-accent-light {
+    background-color: #deceab !important;
+  }
+  .bg-contrast-lower {
+    background-color: #D1D1D1 !important;
+  }
+  .bg-contrast-low {
+    background-color: #B5B5B5 !important;
+  }
   
   
   .margin-xxxxs {
