removed bg-lighter from blocks

--- a/sections/index__social-gallery.liquid
+++ b/sections/index__social-gallery.liquid
@@ -1,4 +1,4 @@
-<section class="section is-width-wide padding-bottom-xl bg-contrast-lower" style="">
+<section class="section is-width-wide padding-bottom-xl" style="">
 <div class="container section is-width-standard">
   <div class="one-whole column">
     <div class="heading-section__content
