home / Make icons consistent size

--- a/assets/styles.scss.liquid
+++ b/assets/styles.scss.liquid
@@ -12982,7 +12982,7 @@ h1.header__logo-text > a {
     margin-bottom: 20px;
     @include respond-to("medium-down") {
       margin-bottom: 0;
-      margin-top: 20px;
+      // margin-top: 20px;
     }
 
     &.is-small {
