--- a/assets/styles/sections/icon-with-text-column.scss
+++ b/assets/styles/sections/icon-with-text-column.scss
@@ -17,7 +17,7 @@
     margin-bottom: 20px;
     @include respond-to("medium-down") {
       margin-bottom: 0;
-      margin-top: 20px;
+      // margin-top: 20px;
     }
 
     &.is-small {
