--- a/sections/footer-classic.liquid
+++ b/sections/footer-classic.liquid
@@ -119,7 +119,7 @@
               {% endif %}
 
               {% if block.settings.newsletter_richtext != blank %}
-                <div class="content">
+                <div class="content text-sm">
                   {{ block.settings.newsletter_richtext }}
                 </div>
               {% endif %}
