--- a/assets/styles/sections/image-with-text-overlay.scss
+++ b/assets/styles/sections/image-with-text-overlay.scss
@@ -54,7 +54,7 @@ $banner-font-size: {{ settings.banner_text_size }}px;
 
       &.has-background .caption-content,
       &.has-border .caption-content {
-        padding: 30px;
+        // padding: 30px;
       }
     }
 
