--- a/assets/styles/sections/slideshow.scss
+++ b/assets/styles/sections/slideshow.scss
@@ -161,7 +161,7 @@
 
 .text-slideshow__heading {
   padding-bottom: 20px;
-  line-height: 1.5;
+  line-height: 107%;
   margin: 0;
 
   &.subtitle {
