--- a/templates/cart.ajax.liquid
+++ b/templates/cart.ajax.liquid
@@ -219,4 +219,9 @@
 
     </div>
   </form>
+
+  <!-- <div class="bg-contrast-lower padding-sm margin-top-md">
+    <p class="text-bold">Rewards</p>
+    <a class="link padding-top-md" href="#smile-points-products"">Redeem Pack Points</a>
+  </div> -->
 </template>
