--- a/templates/collection.liquid
+++ b/templates/collection.liquid
@@ -10,7 +10,7 @@
   <section class="section__wrapper
                   section
                   ">
-    <div class="container {% if settings.heading_divider_style == 'long' %}has-heading-divider-below {% endif %}">
+    <!-- <div class="container {% if settings.heading_divider_style == 'long' %}has-heading-divider-below {% endif %}">
       <div class="collection__breadcrumb two-fifths medium-down--one-whole column has-padding-bottom">
         {% comment %} Collection breadcrumb {% endcomment %}
         <div class="breadcrumb__container">
@@ -41,9 +41,9 @@
           </div>
         </div>
       {% endif %}
-    </div>
+    </div> -->
 
-    {% comment %} Collection description {% endcomment %}
+    <!-- {% comment %} Collection description {% endcomment %}
     {% if collection.description == blank %}
       <div class="container">
         <div class="one-whole column">
@@ -52,7 +52,7 @@
           </div>
         </div>
       </div>
-    {% endif %}
+    {% endif %} -->
 
     {% comment %} Collection sidebar and main content area {% endcomment %}
     <div class="container collection__content">
