--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -270,6 +270,23 @@
   {% endif %}
 
 
+<script>
+  $('.toggle').click(function (e) {
+  e.preventDefault();
+  var $this = $(this);
+  if ($this.next().hasClass('show')) {
+    $this.next().removeClass('show');
+    $this.next().slideUp(350);
+    $this.find('.circle-plus').removeClass('opened');
+  } else {
+    $this.parent().parent().find('li .inner-0').removeClass('show');
+    $this.parent().parent().find('li .inner-0').slideUp(350);
+    $this.next().toggleClass('show');
+    $this.next().slideToggle(350);
+    $this.find('.circle-plus').addClass('opened');
+  }
+});
+</script>
 
 <!-- START / Third-party scripts / Added by Latimer Design -->
     <!-- Barba.js / Page transitions -->
