updated collection banner + font sizes

--- a/assets/styles.scss.liquid
+++ b/assets/styles.scss.liquid
@@ -11091,7 +11091,7 @@ $swatch-label-size: 34px;
     @include respond-to("medium-up") {
       font-size: 30px;
     }
-    color: white;
+    // color: white;
   }
 }
 
@@ -11106,7 +11106,7 @@ $swatch-label-size: 34px;
   font-style: {{ settings.banner_heading__font.style }};
   font-size: {{ settings.banner_heading_size }}px;
   text-transform: {{ settings.banner_heading_style }};
-  color: {{ settings.banner_heading_color }};
+  // color: {{ settings.banner_heading_color }};
 
   @include respond-to('large-down') {
     font-size: 2.5em;
@@ -11123,7 +11123,7 @@ $swatch-label-size: 34px;
   font-style: {{ settings.banner_text__font.style }};
   // font-size: {{ settings.banner_text_size }}px;
   letter-spacing: {{ settings.banner_text_letter_spacing }}px;
-  color: {{ settings.banner_heading_color }};
+  // color: {{ settings.banner_heading_color }};
 }
 
 .dark-overlay-true {
@@ -16741,7 +16741,7 @@ $subtotal-bg-color: #F2F2F2;
 $color-primary: hsl(41, 44%, 37%);
 
 .banner__subheading {
-  color: white;
+  // color: white;
   @include respond-to("medium-up") {
     font-size: 30px;
   }
