--- a/templates/collection.sub-collections.liquid
+++ b/templates/collection.sub-collections.liquid
@@ -9,14 +9,14 @@
                   section__wrapper
                   section
                   ">
-    <div class="collection__breadcrumb-title-filter container is-justify-space-between is-flex-wrap has-padding-bottom is-align-center">
+    <!-- <div class="collection__breadcrumb-title-filter container is-justify-space-between is-flex-wrap has-padding-bottom is-align-center">
       <div class="one-third column medium-down--one-whole">
         {% comment %} Collection breadcrumb {% endcomment %}
         <div class="breadcrumb__container">
           {% render 'breadcrumb', context: 'collection' %}
         </div>
       </div>
-    </div>
+    </div> -->
 
     {% comment %} Collection title {% endcomment %}
     <div class="container">
