--- a/assets/custom.css.liquid
+++ b/assets/custom.css.liquid
@@ -40,6 +40,10 @@
   .bg-contrast-low {
     background-color: #B5B5B5 !important;
   }
+
+  .color-contrast-higher {
+    color: #000 !important;
+  }
   
   
   .margin-xxxxs {
@@ -2339,9 +2343,6 @@
       width: 100vw !important; }
   
   
-      .bg-accent-light {
-        background-color: #6BB8C7 !important;
-      }
   
   article, aside, details, figcaption, figure,
   footer, header, hgroup, menu, nav, section, main, form legend {
