--- a/assets/styles/custom.scss
+++ b/assets/styles/custom.scss
@@ -50,7 +50,7 @@
 $color-primary: hsl(41, 44%, 37%);
 
 .banner__subheading {
-  color: white;
+  // color: white;
   @include respond-to("medium-up") {
     font-size: 30px;
   }
