--- a/assets/styles/sections/banner.scss
+++ b/assets/styles/sections/banner.scss
@@ -56,7 +56,7 @@
     @include respond-to("medium-up") {
       font-size: 30px;
     }
-    color: white;
+    // color: white;
   }
 }
 
@@ -71,7 +71,7 @@
   font-style: {{ settings.banner_heading__font.style }};
   font-size: {{ settings.banner_heading_size }}px;
   text-transform: {{ settings.banner_heading_style }};
-  color: {{ settings.banner_heading_color }};
+  // color: {{ settings.banner_heading_color }};
 
   @include respond-to('large-down') {
     font-size: 2.5em;
@@ -88,7 +88,7 @@
   font-style: {{ settings.banner_text__font.style }};
   // font-size: {{ settings.banner_text_size }}px;
   letter-spacing: {{ settings.banner_text_letter_spacing }}px;
-  color: {{ settings.banner_heading_color }};
+  // color: {{ settings.banner_heading_color }};
 }
 
 .dark-overlay-true {
