updated collection thumbnails

--- a/assets/styles.scss.liquid
+++ b/assets/styles.scss.liquid
@@ -9960,7 +9960,7 @@ $product-hover-bg: {{ settings.product_hover_bg_color | color_modify: 'alpha', 0
 
 .product__thumbnail.has-padding-bottom {
   @include respond-to('medium-down') {
-    padding-bottom: 40px;
+    // padding-bottom: 40px;
   }
 }
 
