--- a/assets/custom.css.liquid
+++ b/assets/custom.css.liquid
@@ -3181,7 +3181,7 @@
   .text-base {
     font-size: 1em !important; }
   
-  small,
+  /* small, */
   .text-sm {
     font-size: var(--text-sm, 0.833em) !important; }
   
