--- a/snippets/include-heading.liquid
+++ b/snippets/include-heading.liquid
@@ -131,12 +131,12 @@
           {% endif %}
 
           {% if settings.display_heading_divider == true %}
-            <div class="heading-divider
+            <!-- <div class="heading-divider
                       heading-divider--{{ settings.heading_divider_style }}"
                   {% if settings.heading_divider_animation != "none" %}
                     data-scroll-class="{{ settings.heading_divider_animation }}"
                   {% endif %}>
-            </div>
+            </div> -->
           {% endif %}
       </div>
     </div>
