--- a/assets/custom.css.liquid
+++ b/assets/custom.css.liquid
@@ -163,7 +163,7 @@
     margin-bottom: auto;
   }
   .margin-bottom-0 {
-    margin-bottom: 0;
+    margin-bottom: 0 !important;
   }
   
   .margin-right-xxxxs {
