--- a/snippets/heading.liquid
+++ b/snippets/heading.liquid
@@ -34,11 +34,11 @@ enable_divider: <boolean>
     {% endif %}
   </{{- heading_tag -}}>
   {% if settings.display_heading_divider == true %}
-    <div class="heading-divider
+    <!-- <div class="heading-divider
                 heading-divider--{{ settings.heading_divider_style }}"
           {% if settings.heading_divider_animation != "none" %}
             data-scroll-class="{{ settings.heading_divider_animation }}"
           {% endif %}>
-    </div>
+    </div> -->
   {% endif %}
 </div>
