--- a/assets/styles/custom.scss
+++ b/assets/styles/custom.scss
@@ -274,6 +274,10 @@ input {
   background: $color-contrast-higher;
 }
 
+.promoted-products-box {
+  display: none !important;
+}
+
 .yotpo-main-title {
   color: black !important;
 }
