--- a/sections/product__main.liquid
+++ b/sections/product__main.liquid
@@ -322,6 +322,7 @@
           {% include 'include-reviews', type: 'block' %}
           <section class="section is-width-standard padding-bottom-xl">
             <div class="container margin-y-xl">
+              <h2>What people are saying</h2>
               <!-- YOTPO Reviews / START -->
               <div class="yotpo yotpo-main-widget" data-product-id="{{ product.id }}" data-name="{{ product.title | escape }}" data-url="{{ shop.url }}{{ product.url }}" data-image-url="{{ product.featured_image | product_img_url: 'large' |replace: '?', '%3F' | replace: '&','%26'}}" data-price="{{ variant.price | money_without_currency }}"
               data-currency=“{{ shop.currency }}” data-description=“{{ product.description | escape }}“>
