--- a/assets/styles.scss.liquid
+++ b/assets/styles.scss.liquid
@@ -3449,7 +3449,7 @@ $control-padding-horizontal: calc(0.625em - #{$control-border-width}) !default;
 ================================================== */
 $badge-border-size: 0.1rem !default;
 $badge-border-radius: 1rem !default;
-$badge-color: {{ settings.header_cart_badge_color }};
+$badge-color: #c2a361;
 $badge-size: 1rem;
 
 .header-cart__icon {
@@ -3461,14 +3461,22 @@ $badge-size: 1rem;
 }
 
 .badge {
-  height: $badge-size;
-  width: $badge-size;
+  height: 0.5rem;
+  width: 0.5rem;
   position: absolute;
-  top: calc(#{$badge-size} * -0.3);
-  left: calc(65% - 0.2rem);
+  // top: calc(#{$badge-size} * -0.3);
+  // left: calc(65% - 0.2rem);
+
+  top: calc(0.68rem);
+  left: calc(65% - 0.5rem);
+  @include respond-to("medium-up") {
+    top: calc(0.9rem);
+    left: calc(65% - 0.55rem);
+  }
+
   font-size: 0.7rem;
   background: $badge-color;
-  color: $background;
+  color: transparent;
   @include flexbox();
   @include justify-content(center);
   @include align-items(center);
