--- a/assets/styles.scss.liquid
+++ b/assets/styles.scss.liquid
@@ -16483,7 +16483,7 @@ $subtotal-bg-color: #F2F2F2;
 
 .accordion dd,
 .faq-accordion dd {
-  display: none;
+  // display: none;
   padding: 20px 20px 20px 40px;
 }
 
@@ -16507,7 +16507,7 @@ $subtotal-bg-color: #F2F2F2;
 
 .accordion dd {
   margin-left: 0;
-  display: none;
+  // display: none;
 
   &[aria-hidden="false"] {
     display: block;
