--- a/assets/styles/templates/faq.scss
+++ b/assets/styles/templates/faq.scss
@@ -93,7 +93,7 @@
 
 .accordion dd,
 .faq-accordion dd {
-  display: none;
+  // display: none;
   padding: 20px 20px 20px 40px;
 }
 
@@ -117,7 +117,7 @@
 
 .accordion dd {
   margin-left: 0;
-  display: none;
+  // display: none;
 
   &[aria-hidden="false"] {
     display: block;
