--- a/snippets/product-accordion.liquid
+++ b/snippets/product-accordion.liquid
@@ -100,6 +100,7 @@
       </div>
     </a>
     <div class="inner-0 list">
+      {{ product.metafields.custom_fields["guaranteed_analysis"] }}
       {% if product.metafields.custom_fields["guaranteed_analysis"] != blank %}
       {{ product.metafields.custom_fields["guaranteed_analysis"] }}
       {% else %}
