--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -9,7 +9,7 @@
                     section
                     is-width-wide
                     ">
-      <div class="container">
+      <!-- <div class="container">
 
         <div class="section is-width-standard">
 
@@ -40,7 +40,7 @@
           </div>
 
         </div>
-      </div>
+      </div> -->
 
       <div class="container">
         {% section 'product__sidebar' %}
@@ -101,7 +101,7 @@
 {% comment %} Product - classic (default) {% endcomment %}
   <div id="template-{{ template | replace: '.', '-' | handle }}" class="shopify-section product-page section__wrapper">
     {% comment %} Breadcrumbs and navigation {% endcomment %}
-    <section class="section
+    <!-- <section class="section
                     is-width-standard
                     has-padding-top
                     has-padding-bottom
@@ -133,7 +133,7 @@
 
         </div>
       </div>
-    </section>
+    </section> -->
 
     {% comment %} Product wrapper {% endcomment %}
     <section class="section
