--- a/assets/styles.scss.liquid
+++ b/assets/styles.scss.liquid
@@ -8457,6 +8457,13 @@ ul.tabs {
   }
 }
 
+.product-gallery .product-gallery__main .flickity-prev-next-button.previous {
+  display: none
+}
+.product-gallery .product-gallery__main .flickity-prev-next-button.next {
+  display: none
+}
+
 .product-gallery__main {
   width: 100%;
 }
@@ -8516,10 +8523,12 @@ ul.tabs {
 // Product gallery thumbnails
 .is-slide-nav--true .product-gallery__thumbnail {
   position: relative;
-  opacity: 0.3;
+  border: 2px solid #ccc;
+  margin: 0 var(--space-xs) !important;
 
   &.is-nav-selected {
     opacity: 1;
+    border: 2px solid black;
   }
 }
 
@@ -8811,10 +8820,14 @@ ul.tabs {
         opacity: 1;
       }
 
+      .flickity-button {
+        background-color: #000 !important;
+      }
+
       .flickity-button-icon {
         height: 30px;
         width: 30px;
-        fill: {{ settings.regular_color }};
+        fill: #fff !important;
       }
 
       &.next {
@@ -9107,7 +9120,7 @@ button.shopify-payment-button__more-options {
 
   .product-quantity-box.purchase-details__quantity {
     @include respond-to('medium-down') {
-      width: 100%;
+      width: 40%;
       margin-right: 0;
 
       .input.quantity {
@@ -9289,7 +9302,7 @@ button.shopify-payment-button__more-options {
   // width: calc(50% - 12px);
 
   @include respond-to('small-down') {
-    width: 100%;
+    width: 40%;
     margin-right: 0;
   }
 
