product / updated gallery thumbnails

--- a/assets/styles.scss.liquid
+++ b/assets/styles.scss.liquid
@@ -8525,6 +8525,8 @@ ul.tabs {
   position: relative;
   border: 2px solid #ccc;
   margin: 0 var(--space-xs) !important;
+  @include filter-bg();
+  padding: var(--space-sm);
 
   &.is-nav-selected {
     opacity: 1;
