--- a/sections/product__reviews.liquid
+++ b/sections/product__reviews.liquid
@@ -1,6 +1,6 @@
-<section class="section is-width-standard padding-bottom-xl">
+<!-- <section class="section is-width-standard padding-bottom-xl">
   <div class="container">
-    <!-- YOTPO Reviews / START -->
+
     <div class="yotpo yotpo-main-widget" data-product-id="{{ product.id }}" data-name="{{ product.title | escape }}" data-url="{{ shop.url }}{{ product.url }}" data-image-url="{{ product.featured_image | product_img_url: 'large' |replace: '?', '%3F' | replace: '&','%26'}}" data-price="{{ variant.price | money_without_currency }}"
     data-currency=“{{ shop.currency }}” data-description=“{{ product.description | escape }}“>
     {%- assign yotpo_offload_content = shop.metafields.yotpo.yotpo_offload_content %}
@@ -27,7 +27,7 @@
       console.log("✅ Added style to Yotpo buttons")
     });
   </script>
-</section>
+</section> -->
 
 
 {% schema %}
